# grizzlars

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.py  pyproject.toml  setup.md
.github/scripts/: vendor_tbb.sh
.github/workflows/: build.yml
DataFrame/include/DataFrame/Internals/: DataFrame_read.tcc  DataFrame_slice.tcc
DataFrame/include/DataFrame/Utils/: DateTime.h  IsolationTree.tcc  Matrix.tcc
DataFrame/include/DataFrame/Utils/Threads/: ThreadPool.h  ThreadPool.tcc
DataFrame/include/DataFrame/Vectors/: VectorPtrView.h  VectorView.h
DataFrame/src/Utils/: DateTime.cc
grizzlars/: __init__.py
src/: grizzlars_bindings.cpp
tests/: mixed_benchmark_test.py  numeric_benchmark_test.py  text_benchmark_test.py
tests/functional/: test_columns_mutation.py  test_construction.py  test_filter_sort.py  test_groupby_join.py  test_io.py  test_missing_concat.py  test_selection_filter.py  test_sort_aggregate.py  test_stats_counts.py  test_window_cumulative_shift.py  test_window_rolling.py
tests/performance/: mixed_benchmark_test.py  numeric_benchmark_test.py  text_benchmark_test.py
